--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,12 @@
 name: Build Job
 on: 
-  push:
-    branches: 
-      - main
+  # push:
+  #   branches: 
+  #     - main
+
+  pull request:
+    branches:
+      - main 
 
 jobs:
   Build:
@@ -10,6 +14,8 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - name: Maven Build
         run: mvn install
@@ -21,6 +27,8 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run tests on main branch
         run: mvn test
