--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,16 @@
 name: Build Job
 on: 
-  # push:
-  #   branches: 
-  #     - main
+  push:
+     branches: 
+       - main
 
   pull_request:
     branches:
       - main 
+  workflow_dispatch:
+    
+  schedule:
+    - cron: "30 12 * * * "
 
 jobs:
   Build:
