--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v2
 
     - name: Build Docker Image
-      run: docker build -t spring-mvc-app:latest .Docker-files/app
+      run: docker build -t spring-mvc-app:latest .Docker-files/app/.
 
     - name: Trivy Image Scan
       uses: aquasecurity/trivy-action@master
