--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <commons-dbcp.version>2.12.0</commons-dbcp.version>
 
         <junit.version>4.13.2</junit.version>
-        <logback.version>1.5.6</logback.version>
+        <logback.version>1.4.14</logback.version> <!-- Updated to stable version -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
@@ -181,14 +181,19 @@
             <version>${logback.version}</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version> <!-- Added for compatibility -->
+        </dependency>
+        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- Log4j Dependencies -->
-        <dependency>
+        <!-- Log4j Dependencies - Removed conflicting log4j-slf4j-impl to avoid SLF4J binding conflicts with logback -->
+        <!-- <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.23.1</version>
@@ -202,7 +207,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.20.0</version>
-        </dependency>
+        </dependency> -->
         <!-- Apache Commons FileUpload -->
         <dependency>
             <groupId>commons-fileupload</groupId>
