--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
 
   vproapp:
     build: 
-      context: ./Docker-files/app
+      context: .
+      dockerfile: ./Docker-files/app/Dockerfile
     image: vprocontainers/vprofileapp
     container_name: vproapp
     ports:
